--- a/lesson-map.html
+++ b/lesson-map.html
@@ -375,8 +375,8 @@ main {
 </main>
 
 <script type="module">
-import { getCurrentUser, logoutStudent } from './firebase-config.js';
-import { getProgressData } from './progress-manager.js';
+import { getCurrentUser, logoutStudent } from '../firebase-config.js';
+import { getProgressData } from '../progress-manager.js';
 
 // Check authentication
 const user = getCurrentUser();
